[package]
name = "rockettesting"
version = "0.1.0"
authors = ["albysmith <48844001+albysmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
handlebars = "2.0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
postgres = "0.17.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve"]